Fixed distorted styles in the text editor and display.

--- a/client/src/app/admin/generic-text/generic-text-editor.component.scss
+++ b/client/src/app/admin/generic-text/generic-text-editor.component.scss
@@ -1,3 +1,3 @@
-.btn {
-    margin-bottom: 1rem;
+.card .card-body p {
+    margin-bottom: 0;
 }
